kubernetes/demo-namespace/demo-services/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-services
  namespace: demo-namespace
  labels:
    app: demo-services
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-services
  template:
    metadata:
      labels:
        app: demo-services
    spec:
      containers:
        - name: demo-services
          image: nginx:latest
          ports:
            - containerPort: 80
