kubernetes/demo-namespace/demo-services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-services
  namespace: demo-namespace
spec:
  selector:
    app: demo-services
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
